add swift as an actual keyword

--- a/src/main/resources/oceanabbyResources/localization/eng/Keywordstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/Keywordstrings.json
@@ -75,5 +75,12 @@
       "devo"
     ],
     "DESCRIPTION": "Remove a card's #yEvo."
+  },
+  {
+    "PROPER_NAME": "Swift",
+    "NAMES": [
+      "swift"
+    ],
+    "DESCRIPTION": "A #yMutation applied to a card. Swift cards draw #b1 card when played."
   }
 ]
