--- a/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
+++ b/src/main/resources/oceanabbyResources/localization/eng/UIstrings.json
@@ -33,5 +33,17 @@
             "Evo",
             "Evo and Upgrade"
         ]
-    }
+    },
+  "${ModID}:EvoCampfireOption": {
+    "TEXT": [
+      "Evolve",
+      "Evo a card in your deck.",
+      "No evo-able cards."
+    ]
+  },
+  "${ModID}:EvoCampfireEffect": {
+    "TEXT": [
+      "Select Cards to Evo."
+    ]
+  }
 }
